force-app/main/default/objects/Account/fields/NumberofStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberofStudents__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Students</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>