force-app/main/default/objects/Account/fields/NumberOfStudentsHierarchy__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudentsHierarchy__c</fullName>
    <label>Number of Students (Hierarchy)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>