force-app/main/default/objects/Account/fields/NumberofStudentsPurchasegroup__c.field-meta.xml
<CustomField>
    <fullName>NumberofStudentsPurchasegroup__c</fullName>
    <label>Number of Students (Purchase group)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>