force-app/main/default/objects/Account/fields/NumberofStudentsSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>NumberofStudentsSchoolTotals__c</fullName>
    <label>Number of Students - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>