force-app/main/default/objects/Account/fields/OldAccountId__c.field-meta.xml
<CustomField>
    <fullName>OldAccountId__c</fullName>
    <externalId>true</externalId>
    <label>OldAccountId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>