force-app/main/default/objects/Account/fields/OldAccountIdOrigin__c.field-meta.xml
<CustomField>
    <fullName>OldAccountIdOrigin__c</fullName>
    <label>OldAccountIdOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>