force-app/main/default/objects/Account/fields/OldAccountIsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>OldAccountIsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OldAccountIsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>