force-app/main/default/objects/Account/fields/OldCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>OldCustomerNumber__c</fullName>
    <description>Customer number from various obsolete systems but are still used as a reference.</description>
    <label>OldCustomerNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>