force-app/main/default/objects/Account/fields/OldOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OldOwnerId__c</fullName>
    <label>Old Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>