force-app/main/default/objects/Account/fields/OldParentId__c.field-meta.xml
<CustomField>
    <fullName>OldParentId__c</fullName>
    <label>OldParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>