force-app/main/default/objects/Account/fields/OldSchoolId__c.field-meta.xml
<CustomField>
    <fullName>OldSchoolId__c</fullName>
    <label>Old School ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>