force-app/main/default/objects/Account/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <defaultValue>
        IF(ISPICKVAL($User.OperatingCompany__c, "Plantyn"), "Plantyn",
        IF(ISPICKVAL($User.OperatingCompany__c, "Liber"), "Liber",
        IF(ISPICKVAL($User.OperatingCompany__c, "Noordhoff"), "Noordhoff",
        IF(ISPICKVAL($User.OperatingCompany__c, "Noordhoff Zorg"), "Noordhoff Zorg",
        "")))) 
    </defaultValue>
    <label>Operating Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperatingCompany</valueSetName>
    </valueSet>
</CustomField>