force-app/main/default/objects/Account/fields/OrderFlowName__c.field-meta.xml
<CustomField>
    <fullName>OrderFlowName__c</fullName>
    <description>Formula field used for the search Account option on the order details screen of the createSalesOrderV2 flow. Displaying Billing Address Information</description>
    <formula>Name + &apos;, &apos; + ExternalCustomerId__c + &apos;, &apos; +  BillingStreet + &apos;, &apos; +  BillingCity  + &apos;, &apos; +  BillingPostalCode  + &apos;, &apos; + NetsuiteCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Flow Name</label>
    <type>Text</type>
</CustomField>