force-app/main/default/objects/Account/fields/OrderNotificationEmail2__c.field-meta.xml
<CustomField>
    <fullName>OrderNotificationEmail2__c</fullName>
    <label>zRemove Order Notification Email 2</label>
    <type>Email</type>
</CustomField>