force-app/main/default/objects/Account/fields/OrderNotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>OrderNotificationEmail__c</fullName>
    <label>Order Notification Email</label>
    <type>Email</type>
</CustomField>