force-app/main/default/objects/Account/fields/OwnerIsSalesRep__c.field-meta.xml
<CustomField>
    <fullName>OwnerIsSalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner is SalesRep</label>
    <type>Checkbox</type>
</CustomField>