force-app/main/default/objects/Account/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>Formula field to capture the full name of the Account Owner.</description>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>