force-app/main/default/objects/Account/fields/PackingSlipName__c.field-meta.xml
<CustomField>
    <fullName>PackingSlipName__c</fullName>
    <inlineHelpText>The name of the account to be printed on packing slips (limited to 45 characters for PU and NU).</inlineHelpText>
    <label>Packing Slip Name</label>
    <length>83</length>
    <type>Text</type>
</CustomField>