force-app/main/default/objects/Account/fields/PalletRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>PalletRegistrationNumber__c</fullName>
    <inlineHelpText>The Pallet registration number tells the warehouse whether a customer is connected to an organization for handling of EU-Pallets.</inlineHelpText>
    <label>Pallet Registration Number</label>
    <length>22</length>
    <type>Text</type>
</CustomField>