force-app/main/default/objects/Account/fields/ParentCity__c.field-meta.xml
<CustomField>
    <fullName>ParentCity__c</fullName>
    <formula>Parent.ShippingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>