force-app/main/default/objects/Account/fields/ParentCountry__c.field-meta.xml
<CustomField>
    <fullName>ParentCountry__c</fullName>
    <formula>Parent.ShippingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>