force-app/main/default/objects/Account/fields/ParentExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ParentExternalCustomerId__c</fullName>
    <label>Parent External Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>