force-app/main/default/objects/Account/fields/ParentSchoolMatch__c.field-meta.xml
<CustomField>
    <fullName>ParentSchoolMatch__c</fullName>
    <formula>IF(
  Parent.Id = School__r.Id, TRUE, FALSE
)</formula>
    <label>Parent &amp; School - Match</label>
    <type>Checkbox</type>
</CustomField>