force-app/main/default/objects/Account/fields/ParentStreet__c.field-meta.xml
<CustomField>
    <fullName>ParentStreet__c</fullName>
    <formula>Parent.ShippingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>