force-app/main/default/objects/Account/fields/ParentZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ParentZipPostalCode__c</fullName>
    <formula>Parent.ShippingPostalCode</formula>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>