force-app/main/default/objects/Account/fields/PAYTOverview__c.field-meta.xml
<CustomField>
    <fullName>PAYTOverview__c</fullName>
    <description>Link to the account overview page in PAYT</description>
    <inlineHelpText>Link to the account overview page in PAYT.</inlineHelpText>
    <label>PAYT Overview</label>
    <type>Url</type>
</CustomField>