force-app/main/default/objects/Account/fields/PEStudents__c.field-meta.xml
<CustomField>
    <fullName>PEStudents__c</fullName>
    <label>PE # Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>