force-app/main/default/objects/Account/fields/PEStudentSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>PEStudentSchoolTotals__c</fullName>
    <label>PE # Student - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>