force-app/main/default/objects/Account/fields/PhoneCountry__c.field-meta.xml
<CustomField>
    <fullName>PhoneCountry__c</fullName>
    <label>Phone Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>