force-app/main/default/objects/Account/fields/PhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>PhoneCountryCode__c</fullName>
    <inlineHelpText>This field includes the country dial code with the phone number. Replacing the 0 with the country dial code based on the &quot;Phone Country&quot; selected upon saving.</inlineHelpText>
    <label>Phone Country Code</label>
    <type>Phone</type>
</CustomField>