force-app/main/default/objects/Account/fields/PhoneLegacy__c.field-meta.xml
<CustomField>
    <fullName>PhoneLegacy__c</fullName>
    <label>Phone Legacy</label>
    <type>Phone</type>
</CustomField>