force-app/main/default/objects/Account/fields/PhoneOptOut__c.field-meta.xml
<CustomField>
    <fullName>PhoneOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Opt Out</label>
    <type>Checkbox</type>
</CustomField>