force-app/main/default/objects/Account/fields/PlannedQualifiedActivity__c.field-meta.xml
<CustomField>
    <fullName>PlannedQualifiedActivity__c</fullName>
    <label>Planned Qualified Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>