force-app/main/default/objects/Account/fields/PlantynTestField__c.field-meta.xml
<CustomField>
    <fullName>PlantynTestField__c</fullName>
    <description>Field to test permission sets accross Opco&apos;s</description>
    <inlineHelpText>Field to test permission sets accross Opco&apos;s</inlineHelpText>
    <label>PlantynTestField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>