force-app/main/default/objects/Account/fields/PostalOptOut__c.field-meta.xml
<CustomField>
    <fullName>PostalOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate that an account does not want to receive postal advertisements (previously managed in Selligent)</description>
    <label>Postal Opt Out</label>
    <type>Checkbox</type>
</CustomField>