force-app/main/default/objects/Account/fields/PreschoolClass__c.field-meta.xml
<CustomField>
    <fullName>PreschoolClass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preschool class</label>
    <type>Checkbox</type>
</CustomField>