force-app/main/default/objects/Account/fields/PricingDiscountGroup__c.field-meta.xml
<CustomField>
    <fullName>PricingDiscountGroup__c</fullName>
    <label>Pricing Discount Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>