force-app/main/default/objects/Account/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <description>This is the Primary Contact of this Account. This field is controlled by the field &apos;Primary Contact&apos; on the Contact-record</description>
    <inlineHelpText>This is the Primary Contact of this Account. This field is controlled by the field &apos;Primary Contact&apos; on the Contact-record</inlineHelpText>
    <label>Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>