force-app/main/default/objects/Account/fields/ProdAccountId__c.field-meta.xml
<CustomField>
    <fullName>ProdAccountId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ProdAccountId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>