force-app/main/default/objects/Account/fields/PurchasingGroup__c.field-meta.xml
<CustomField>
    <fullName>PurchasingGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates what Purchasing Group an Account is member of.</inlineHelpText>
    <label>Purchasing Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Purchasing Group)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>