force-app/main/default/objects/Account/fields/PurchasingGroupLegacy__c.field-meta.xml
<CustomField>
    <fullName>PurchasingGroupLegacy__c</fullName>
    <label>Purchasing Group Legacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>