force-app/main/default/objects/Account/fields/RenewalAssetToday__c.field-meta.xml
<CustomField>
    <fullName>RenewalAssetToday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Asset Today</label>
    <type>Checkbox</type>
</CustomField>