force-app/main/default/objects/Account/fields/SafeId__c.field-meta.xml
<CustomField>
    <fullName>SafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeId</label>
    <type>Text</type>
</CustomField>