force-app/main/default/objects/Account/fields/SalesAccount__c.field-meta.xml
<CustomField>
    <fullName>SalesAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.TypeOfAccount__c</field>
            <operation>equals</operation>
            <value>Sales, Sales and Order</value>
        </filterItems>
        <filterItems>
            <field>$Source.TypeOfAccount__c</field>
            <operation>equals</operation>
            <value>Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Sales Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>