force-app/main/default/objects/Account/fields/SalesPriority__c.field-meta.xml
<CustomField>
    <fullName>SalesPriority__c</fullName>
    <description>TEMP field for current season. Will be replaced with account score.</description>
    <label>Sales Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>