force-app/main/default/objects/Account/fields/SAS__c.field-meta.xml
<CustomField>
    <fullName>SAS__c</fullName>
    <label>SAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broekx</fullName>
            </value>
            <value>
                <fullName>Informat</fullName>
            </value>
            <value>
                <fullName>Onbekend</fullName>
            </value>
            <value>
                <fullName>Schoolonline</fullName>
            </value>
            <value>
                <fullName>Wisa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>