force-app/main/default/objects/Account/fields/SchoolCity__c.field-meta.xml
<CustomField>
    <fullName>SchoolCity__c</fullName>
    <formula>School__r.ShippingCity</formula>
    <label>School - City</label>
    <type>Text</type>
</CustomField>