force-app/main/default/objects/Account/fields/Schoolnet__c.field-meta.xml
<CustomField>
    <fullName>Schoolnet__c</fullName>
    <inlineHelpText>GHE: test to update this from uploads</inlineHelpText>
    <label>Schoolnet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>enseignement communal</fullName>
            </value>
            <value>
                <fullName>enseignement de la communauté</fullName>
            </value>
            <value>
                <fullName>enseignement libre</fullName>
            </value>
            <value>
                <fullName>enseignement provincial</fullName>
            </value>
            <value>
                <fullName>Gemeenschapsonderwijs</fullName>
            </value>
            <value>
                <fullName>OVSG</fullName>
            </value>
            <value>
                <fullName>POV</fullName>
            </value>
            <value>
                <fullName>Vrij Onderwijs</fullName>
            </value>
            <value>
                <fullName>Vrij Onderwijs- OVSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>