force-app/main/default/objects/Account/fields/SchoolType__c.field-meta.xml
<CustomField>
    <fullName>SchoolType__c</fullName>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>School Group</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>School</fullName>
                <isActive>false</isActive>
                <label>School</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>