force-app/main/default/objects/Account/fields/SEStudents__c.field-meta.xml
<CustomField>
    <fullName>SEStudents__c</fullName>
    <label>SE # Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>