force-app/main/default/objects/Account/fields/SEStudentSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>SEStudentSchoolTotals__c</fullName>
    <label>SE # Student - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>