force-app/main/default/objects/Account/fields/SEStudentsPartTime__c.field-meta.xml
<CustomField>
    <fullName>SEStudentsPartTime__c</fullName>
    <inlineHelpText>Part time students</inlineHelpText>
    <label>SE # Students - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>