force-app/main/default/objects/Account/fields/SEUsers__c.field-meta.xml
<CustomField>
    <fullName>SEUsers__c</fullName>
    <label>SE # Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>