force-app/main/default/objects/Account/fields/ShipComplete__c.field-meta.xml
<CustomField>
    <fullName>ShipComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting sets any order created for a customer to ship complete.</description>
    <inlineHelpText>This setting sets any order created for this customer to ship complete.</inlineHelpText>
    <label>Ship Complete</label>
    <type>Checkbox</type>
</CustomField>