force-app/main/default/objects/Account/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>ILAddress__c</referenceTo>
    <relationshipLabel>Accounts (Shipping Address)</relationshipLabel>
    <relationshipName>ShippingAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>