force-app/main/default/objects/Account/fields/ShippingAddressNotes__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressNotes__c</fullName>
    <label>Shipping Address Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>