force-app/main/default/objects/Account/fields/ShippingAddressStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressStatusCode__c</fullName>
    <label>Shipping Address Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>