force-app/main/default/objects/Account/fields/ShippingCostExempt__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Cost Exempt</label>
    <type>Checkbox</type>
</CustomField>