force-app/main/default/objects/Account/fields/ShippingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingHouseNumber__c</fullName>
    <label>Shipping House Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>