force-app/main/default/objects/Account/fields/ShippingPostalNumeric__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalNumeric__c</fullName>
    <formula>Value(left(ShippingPostalCode,4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingPostalNumeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>