force-app/main/default/objects/Account/fields/ShippingStreetName__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreetName__c</fullName>
    <label>Shipping Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>