force-app/main/default/objects/Account/fields/shipToAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>shipToAttentionOf__c</fullName>
    <description>The person or the agent of the receiving comapany who will collect the goods.</description>
    <label>Ship-To Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>