force-app/main/default/objects/Account/fields/ShortCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ShortCompanyName__c</fullName>
    <label>Short Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>