force-app/main/default/objects/Account/fields/StreamNumber__c.field-meta.xml
<CustomField>
    <fullName>StreamNumber__c</fullName>
    <label>Stream Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>