force-app/main/default/objects/Account/fields/Student1ASchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>Student1ASchoolTotals__c</fullName>
    <label>Student 1A - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>