force-app/main/default/objects/Account/fields/Student3ArbeidSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>Student3ArbeidSchoolTotals__c</fullName>
    <label>Student 3 Arbeid - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>