force-app/main/default/objects/Account/fields/Student3DubbelSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>Student3DubbelSchoolTotals__c</fullName>
    <label>Student 3 Dubbel - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>