force-app/main/default/objects/Account/fields/Students1A__c.field-meta.xml
<CustomField>
    <fullName>Students1A__c</fullName>
    <label>Students 1A</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>