force-app/main/default/objects/Account/fields/Students3Arbeid__c.field-meta.xml
<CustomField>
    <fullName>Students3Arbeid__c</fullName>
    <label>Students 3 Arbeid</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>