force-app/main/default/objects/Account/fields/Students3Doorstroom__c.field-meta.xml
<CustomField>
    <fullName>Students3Doorstroom__c</fullName>
    <label>Students 3 Doorstroom</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>