force-app/main/default/objects/Account/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <description>Depends on the Selection of &apos;Industry&apos;</description>
    <inlineHelpText>Select an &apos;Industry&apos; for options.</inlineHelpText>
    <label>Sub Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addiction Care</fullName>
            </value>
            <value>
                <fullName>Ambulance Dispatch Centre</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Commercial Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Detacheringsbureau</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Disabled Care Sector</fullName>
            </value>
            <value>
                <fullName>Elderly Care</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Maternity Care</fullName>
            </value>
            <value>
                <fullName>Medical Crèche</fullName>
            </value>
            <value>
                <fullName>Mental Healthcare</fullName>
            </value>
            <value>
                <fullName>Overig</fullName>
            </value>
            <value>
                <fullName>Palliative Care</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Centre</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Semi-public</fullName>
            </value>
            <value>
                <fullName>Transport &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>woonboerderij</fullName>
            </value>
            <value>
                <fullName>Youth Care</fullName>
            </value>
            <value>
                <fullName>E-Learning</fullName>
                <isActive>false</isActive>
                <label>E-Learning</label>
            </value>
            <value>
                <fullName>Education Management</fullName>
                <isActive>false</isActive>
                <label>Education Management</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <isActive>false</isActive>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>