force-app/main/default/objects/Account/fields/SuccessStatusOfLastAWSUpdate__c.field-meta.xml
<CustomField>
    <fullName>SuccessStatusOfLastAWSUpdate__c</fullName>
    <description>Integration Factory Status of last update or insert</description>
    <label>SuccessStatusOfLastAWSUpdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>