force-app/main/default/objects/Account/fields/TEMP_AccountsToUpdate__c.field-meta.xml
<CustomField>
    <fullName>TEMP_AccountsToUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP_AccountsToUpdate</label>
    <type>Checkbox</type>
</CustomField>