force-app/main/default/objects/Account/fields/TEMP_ClassificationDataIsUpdated_del__c.field-meta.xml
<CustomField>
    <fullName>TEMP_ClassificationDataIsUpdated_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP_ClassificationDataIsUpdated</label>
    <type>Checkbox</type>
</CustomField>