force-app/main/default/objects/Account/fields/TEMP_Importfield_I_M__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Importfield_I_M__c</fullName>
    <description>Temporary field used for informat Import</description>
    <label>TEMP_Importfield_I_M</label>
    <length>255</length>
    <type>Text</type>
</CustomField>