force-app/main/default/objects/Account/fields/TEMP_Importfield_SG__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Importfield_SG__c</fullName>
    <label>TEMP_Importfield_SG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>