force-app/main/default/objects/Account/fields/TEMP_Importfield_SV__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Importfield_SV__c</fullName>
    <label>TEMP_Importfield_SV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>