force-app/main/default/objects/Account/fields/Temp_PostalCodeMatch__c.field-meta.xml
<CustomField>
    <fullName>Temp_PostalCodeMatch__c</fullName>
    <formula>IF(ShippingPostalCode = ShippingAddress__r.PostalCode__c, true, false)</formula>
    <label>Temp_PostalCodeMatch</label>
    <type>Checkbox</type>
</CustomField>