force-app/main/default/objects/Account/fields/TEMP_undeleted__c.field-meta.xml
<CustomField>
    <fullName>TEMP_undeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP_undeleted</label>
    <type>Checkbox</type>
</CustomField>