force-app/main/default/objects/Account/fields/TEMP_Unique_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Unique_Import_ID__c</fullName>
    <label>TEMP_Unique_Import_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>