force-app/main/default/objects/Account/fields/TempLegalName__c.field-meta.xml
<CustomField>
    <fullName>TempLegalName__c</fullName>
    <formula>IF(NOT(ISBLANK(FullLegalName__c)),LEFT(FullLegalName__c,83),LEFT(Name,83))</formula>
    <label>Temp Legal Name</label>
    <type>Text</type>
</CustomField>